<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bgsoftware</groupId>
    <artifactId>SuperiorSkyblockOneBlock</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>SuperiorSkyblockOneBlock</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>bytecode.space</id>
            <url>https://repo.bytecode.space/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>
                                        com.bgsoftware.superiorskyblock.libs.com.zaxxer.hikari
                                    </shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>
                                        com.bgsoftware.superiorskyblock.libs.org.bstats
                                    </shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>com.bgsoftware.common</pattern>
                                    <shadedPattern>
                                        com.bgsoftware.superiorskyblock.libs.com.bgsoftware.common
                                    </shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>ca.bkaw</groupId>
                <artifactId>paper-nms-maven-plugin</artifactId>
                <version>1.4.10</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>ss-nms</id>
            <url>https://repo.bg-software.com/repository/nms/</url>
        </repository>
        <repository>
            <id>ss-api</id>
            <url>https://repo.bg-software.com/repository/api/</url>
        </repository>
        <repository>
            <id>ss-common</id>
            <url>https://repo.bg-software.com/repository/common/</url>
        </repository>
        <repository>
            <id>ss-dependencies</id>
            <url>https://repo.bg-software.com/repository/dependencies/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>ca.bkaw</groupId>
            <artifactId>paper-nms</artifactId>
            <version>1.20.6-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>redempt.redlib</groupId>
            <artifactId>RedLib</artifactId>
            <version>6.6.1</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/libs/RedLib-6.6.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.bgsoftware</groupId>
            <artifactId>SuperiorSkyblock</artifactId>
            <version>2024.4</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/libs/SuperiorSkyblock2-2024.4.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.bgsoftware.common.config</groupId>
            <artifactId>CommentedConfiguration</artifactId>
            <version>b1</version>
        </dependency>
        <dependency>
            <groupId>com.bgsoftware.common.nmsloader</groupId>
            <artifactId>NMSLoader</artifactId>
            <version>b9</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
